--- a/chat-with-pdf-backend/requirements.txt
+++ b/chat-with-pdf-backend/requirements.txt
@@ -1,4 +1,1 @@
-fastapi==0.115.0 
-uvicorn==0.30.6 
-pydantic==2.9.2 
-huggingface_hub==0.25.2
+fastapi==0.115.0 uvicorn==0.30.6 pydantic==2.9.2 requests==2.32.3
